[package]
name = "reorder"
version = "1.0.3"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"
description = "Reorder a slice based on a slice of indicies"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/reorder"
keywords = ["rank", "reorder"]
readme = "readme.md"

[dependencies]

[dev-dependencies]
rand = "0.6.4"

