[package]
name = "reorder"
version = "2.1.2"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"
description = "Reorder a slice based on a slice of indices"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/reorder"
keywords = ["rank", "reorder"]
readme = "readme.md"

[dependencies]

[dev-dependencies]


